--- a/index.html
+++ b/index.html
@@ -175,10 +175,9 @@
         </div>
         <div class="social-media">
             <h3>Here are my Socials</h3>
-            <a href="https://www.facebook.com/yourprofile" target="_blank" class="social-icon"><i class="fab fa-facebook-f"></i></a>
-            <a href="https://twitter.com/yourprofile" target="_blank" class="social-icon"><i class="fab fa-twitter"></i></a>
-            <a href="https://www.linkedin.com/in/yourprofile" target="_blank" class="social-icon"><i class="fab fa-linkedin-in"></i></a>
-            <a href="https://github.com/yourprofile" target="_blank" class="social-icon"><i class="fab fa-github"></i></a>
+            <a href="https://www.facebook.com/profile.php?id=61572632514203" target="_blank" class="social-icon"><i class="fab fa-facebook-f"></i></a>
+            <a href="https://www.linkedin.com/in/angelo-del-rosario-b73b84348/" target="_blank" class="social-icon"><i class="fab fa-linkedin-in"></i></a>
+            <a href="https://github.com/aodr-dev" target="_blank" class="social-icon"><i class="fab fa-github"></i></a>
         </div>
     </div>
 </section>
